# populations-simulation

./: main.py  pyproject.toml
src/: model.py  test_script.py  view.py
